# clint

./: Readme.md  meson.build
include/clint/: clint.h  util.h
src/: main.c  util.c
test/: util.c
